# email-draft-bot

./: .gitignore  Cargo.toml  PRIVACY_POLICY.md  README.md  wrangler.toml
src/: lib.rs
src/drive/: client.rs
src/gemini/: client.rs  prompts.rs
src/gmail/: client.rs
src/models/: mod.rs
