[package]
name = "email-draft-bot"
version = "0.1.0"
edition = "2021"
authors = ["solanastation"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.141"
base64 = "0.22.1"
